--- a/Mesmerist/Mesmerist.csproj
+++ b/Mesmerist/Mesmerist.csproj
@@ -61,7 +61,7 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <Reference Include="TabletopTweaks-Core">
-	    <HintPath>D:\Program Files (x86)\Steam\steamapps\common\Pathfinder Second Adventure\Mods\TabletopTweaks-Core\TabletopTweaks-Core.dll</HintPath>
+	    <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Pathfinder Second Adventure\Mods\TabletopTweaks-Core\TabletopTweaks-Core.dll</HintPath>
 	  </Reference>
 	</ItemGroup>
 	<Target Name="GenerateCustomPropsFile" Condition="$(WrathInstallDir) == ''">
